<resources>
    <string name="app_name">KotlinWanAndroid</string>

    <string name="home">首页</string>
    <string name="square">广场</string>
    <string name="square_list">广场列表</string>
    <string name="wechat">公众号</string>
    <string name="system">体系</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="my">我的</string>

    <string name="action_search">搜索</string>
    <string name="action_setting">设置</string>
    <string name="choose_theme_color">主题颜色</string>
    <string name="choose_theme_color_summary">自定义主题颜色</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="done">完成</string>
    <string name="custom">自定义</string>
    <string name="current_version">当前版本\t\t &#32;%s</string>

    <string name="admin">账号</string>
    <string name="password">密码</string>
    <string name="re_password">确认密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="go_login">去登录</string>
    <string name="go_register">去注册</string>
    <string name="user_id">ID:&#32;%d</string>
    <string name="register_success">注册成功, 请登录</string>
    <string name="login_success">登录成功</string>
    <string name="logout">退出登录</string>
    <string name="questions_and_answers">每日一问</string>
    <string name="not_questions_and_answers">暂无问答列表</string>

    <string name="collect_success">收藏成功</string>
    <string name="cancel_collect">取消收藏</string>

    <string name="level_rank">等级: %d\t\t\t排名: %s</string>
    <string name="my_integral">我的积分</string>
    <string name="integral_ranking">积分排行</string>
    <string name="my_share">我的分享</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_tool">我的工具</string>
    <string name="project_home">项目主页</string>
    <string name="message">站内消息</string>
    <string name="standard_mode">标准模式</string>
    <string name="dark_mode">深色模式</string>
    <string name="search_hint">搜索关键词以空格隔开</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_history">搜索历史</string>

    <string name="wan_android">https://www.wanandroid.com</string>
    <string name="wan_android_tools">https://www.wanandroid.com/tools</string>
    <string name="git_url_wan_android">https://github.com/xiaobinAndroid421726260/KotlinMvvmWanAndroid.git</string>

    <string name="FloatingActionButtonBehavior">com.kotlin.mvvm.view.FloatingActionButtonBehavior</string>

    <string name="common_connect_error">网络连接错误</string>
    <string name="common_connect_timeout">网络请求超时</string>
    <string name="common_bad_network">网络请求出错</string>
    <string name="common_parse_error">解析错误</string>
    <string name="common_unknown_error">未知错误</string>
    <!-- 网络连接错误，请稍后重试 -->
    <string name="network_connection_error">Network connection error, please try again later</string>
</resources>